--- a/src/GUI/AdminSide.form
+++ b/src/GUI/AdminSide.form
@@ -220,7 +220,7 @@
                   <text value="Eliminar de cola"/>
                 </properties>
               </component>
-              <component id="79a98" class="javax.swing.JTextArea" binding="pruebaTextArea">
+              <component id="79a98" class="javax.swing.JTextArea" binding="mostrarColaDeReservasCanchas">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="50"/>
